fixed images in posts on small screens, make date darker, add post icon on home screem

--- a/src/documents/css/site.css.styl
+++ b/src/documents/css/site.css.styl
@@ -340,6 +340,8 @@ a.button
 
 #post
   .date
-    color: #e6e6e6
+    color: #d9d9d9
     text-align: right
     font-size: 0.8em
+  img
+    max-width: 100%
